@@ -33,7 +33,7 @@ requires:
   Tag::Reader::Perl: 0.01
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=SGML-PYX
-  homepage: https://github.com/tupinek/SGML-PYX
+  homepage: https://github.com/michal-josef-spacek/SGML-PYX
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/SGML-PYX
+  repository: git://github.com/michal-josef-spacek/SGML-PYX
 version: '0.03'
