@@ -26,8 +26,8 @@ requires 'PYX' => 0.05;
 requires 'PYX::Utils' => 0.04;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=SGML-PYX';
-resources 'homepage' => 'https://github.com/tupinek/SGML-PYX';
-resources 'repository' => 'git://github.com/tupinek/SGML-PYX';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/SGML-PYX';
+resources 'repository' => 'git://github.com/michal-josef-spacek/SGML-PYX';
 test_requires 'File::Object' => 0.07;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
