@@ -78,7 +78,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/SGML-PYX>
+    <https://github.com/michal-josef-spacek/SGML-PYX>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
